--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-   background-color: rgb(19, 172, 233);
+   background-color:#005959;
 }
 
 .header{
@@ -43,4 +43,18 @@ body{
 
 .navbar a:hover{
     color: #0ef;
+}
+
+.home{
+    position:relative ;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 70px 10% 0;
+}
+
+.image-sectin img {
+    width: 50vh;
 }
