--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 10px;
+    padding: 20px 30px;
     background-color: transparent;
     display: flex;
     justify-content: space-between;
@@ -25,7 +25,7 @@ body{
 .logo{
     position: relative;
     font-size: 25px;
-    color: black;
+    color: #fff;
     text-decoration: none;
     font-weight: 600;
    
@@ -36,7 +36,7 @@ body{
     font-size: 25px;
     text-decoration: none;
     font-weight: 500;
-    color: black;
+    color: #fff;
     margin-left: 35px;
     transition: .3s;
 }
@@ -55,6 +55,69 @@ body{
     padding: 70px 10% 0;
 }
 
+.home-content{
+    max-width: 600px;
+    color: #fff;
+}
+
+.home-content h3{
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.home-content h1{
+    font-size: 56px;
+    font-weight: 700px;
+    margin: -3px 0;
+}
+
 .image-sectin img {
     width: 50vh;
+}
+
+
+.home-content p{
+    font-size: 20px;
+}
+
+.home-sci a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    text-decoration: none;
+    background: transparent;
+    color: #0ef;
+    border: 2px solid #0ef;
+    border-radius: 50%;
+    font-size: 20px;
+    margin: 30px 15px 30px 0;
+}
+
+.home-sci a:hover{
+    background: #0ef;
+    color: #081b29;
+    box-shadow: 0 0px 20px #0ef;
+}
+
+
+.btn-box{
+       display: inline-block;
+       padding: 12px 28px;
+       background: #0ef;
+       border-radius: 40px;
+       font-size: 16px;
+       text-decoration: none;
+       color: #081b29;
+       font-weight: 600;
+       letter-spacing: 1px;
+}
+
+
+.btn-box:hover{
+    box-shadow: 0 0 5px cyan,
+    0 0 25px cyan, 0 0 50px cyan,
+    0 0 100px cyan, 0 0 200px cyan
+    
 }
