--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body{
    background-color:#005959;
+   color: #fff;
 }
 
 .header{
@@ -15,7 +16,7 @@ body{
     left: 0;
     width: 100%;
     padding: 20px 30px;
-    background-color: transparent;
+    background-color: #005959;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -39,7 +40,7 @@ body{
         opacity: 0;
     }
     100%{
-    transform: translateX(100px);
+    transform: translateX(60px);
     opacity: 1;
     }
 }
@@ -74,10 +75,11 @@ body{
     position:relative ;
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
     align-items: center;
     padding: 70px 10% 0;
+    
 }
 
 .home-content{
@@ -125,7 +127,9 @@ body{
 
 
 .image-sectin img {
-    width: 50vh;
+    max-width: 630px;
+    height: auto;
+    width: 100%;
 }
 
 
@@ -153,7 +157,7 @@ body{
     border-radius: 50%;
     font-size: 20px;
     margin: 30px 15px 30px 0;
-    animation: slideIcon 1s ease forwards;
+    animation: slideIcon .7s ease forwards;
 }
 
 @keyframes slideIcon{
@@ -193,4 +197,38 @@ body{
     0 0 25px cyan, 0 0 50px cyan,
     0 0 100px cyan, 0 0 200px cyan
     
+}
+
+.about{
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    padding: 70px 10% 0;
+    
+}
+
+.about img {
+    max-width: 630px;
+    height: auto;
+    width: 100%;
+}
+
+.about-text h2{
+    font-size: 50px;
+}
+
+.about-text h2 span{
+    color: #0ef;
+}
+
+.about-text h4{
+    margin-bottom: 1rem
+}
+
+.about-text p{
+    text-align: justify;
+    text-justify: inter-word;
+    margin-bottom: 4rem;
 }
