--- a/style.css
+++ b/style.css
@@ -232,3 +232,78 @@ body{
     text-justify: inter-word;
     margin-bottom: 4rem;
 }
+
+
+
+#services{
+    font-size: 20px;
+    line-height: 2remrem;
+    margin-bottom: 4rem;
+}
+
+.container{
+    padding: 90px;
+}
+
+.sub-title{
+    text-align: center;
+    font-size: 50px;
+    padding-bottom: 70px;
+}
+
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.services-list div{
+
+    border: 10px;
+    border-radius: 20px;
+    font-size: 13px;
+    font-weight: 13px;
+    padding: 40px;
+    box-shadow: 1px 1px 20px #0ef;
+}
+
+.services-list div i{
+       font-size: 50px;
+       margin-bottom: 20px;
+}
+
+.services-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+
+.services-list div a{
+   text-decoration: none;
+   color: #000000;
+   font-size: 12px;
+   margin-top: 20px;
+   display: inline-block;
+}
+
+.read{
+    
+    background: #0ef;
+    padding: 12px 28px;
+    border-radius: 40px;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    animation: slideToTop 1s ease forwards;
+    opacity: 0;
+    animation-delay: 1s ;
+    box-shadow: 0  0 5px #0ef, 0  0 25px #0ef;
+}
+
+.read:hover{
+    box-shadow: 0 0 5px cyan,
+    0 0 25px cyan, 0 0 50px cyan,
+    0 0 100px cyan, 0 0 200px cyan
+}
